--- a/web/schedule/src/app/component/admin-schedule/admin-schedule.component.scss
+++ b/web/schedule/src/app/component/admin-schedule/admin-schedule.component.scss
@@ -3,146 +3,214 @@
   min-height: calc(100vh - 50px);
   overflow: hidden;
   padding: 5px 5px;
-  max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
   font-family: Garamond, monospace;
   text-align: center;
   font-size: 20px;
 
-  .schedule-container{
+  .schedule-container {
     padding: 10px;
     height: 100%;
     text-align: center;
-  }
-  .schedule-form{
-    input {
-      border: 1px solid #2e2328;
-      border-radius: 4px;
-      padding: 10px;
-      width: 20%;
-      margin: 10px;
 
-    }
 
-    .clearfix { *zoom: 2;
-      background: whitesmoke;
-      max-width: 1000px;
-      align-items: flex-start;
-      .text{
-        color: var(--dark);
-        font-family: Garamond, monospace;
+    .schedule-form {
+      input {
+        border: 1px solid #2e2328;
+        border-radius: 4px;
+        padding: 10px;
+        width: 20%;
+        margin: 10px;
       }
-      .wrapper {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-      }
-      .box1 {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        margin-left: auto;
-        margin-right: auto;
-        min-width: 10px;
 
-      }
-      .box2 {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        margin-left: auto;
-        margin-right: auto;
-        min-width: 10px;
+      .clearfix {
+        *zoom: 2;
+        background: whitesmoke;
+        align-items: flex-start;
+        width: 80%;
+        margin: 0 auto;
+        -webkit-border-radius: 10px;
 
-      }
-      .box3 {
-        grid-column-start: 3;
-        grid-column-end: 4;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-  }
+        .search-container input[name=search] {
+          width: 150px;
+        }
+        .text {
+          color: var(--dark);
+          font-family: Garamond, monospace;
+        }
 
-  button {
-    background-color: rgba(178, 149, 166, 0.96);
-    align-self: center;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 10px;
-    font-size: 20px;
-    cursor:pointer;
-    width: 200px;
-    height: 50px;
-    font-family: Garamond, monospace;
-    margin: 1%;
-    padding: 10px;
-  }
+        .wrapper {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+        }
 
-  .schedule-table {
-    width: 100%;
-    margin-top: 4px;
-    background-color: #fbfbfb;
-    border-collapse: collapse;
-    vertical-align: top;
-    max-width: 100%;
-    table-layout: fixed;
-    overflow-x: auto;
+        .box1 {
+          grid-column-start: 1;
+          grid-column-end: 2;
+          margin-left: auto;
+          margin-right: auto;
+          min-width: 10px;
 
-    .num{
-      width: auto;
-    }
+        }
 
-    .name{
-      width: 32%;
-    }
+        .box2 {
+          grid-column-start: 2;
+          grid-column-end: 3;
+          margin-left: auto;
+          margin-right: auto;
+          min-width: 10px;
 
-    // optional - looks better for small cell values
-    white-space: nowrap;
-    border-spacing: 0;
+        }
 
+        .box3 {
+          grid-column-start: 3;
+          grid-column-end: 4;
+          margin-left: auto;
+          margin-right: auto;
+        }
 
-    th {
-      padding: 6px 12px;
-      border: 1px solid #d9d7ce;
-      font-size: 20px;
-      text-align: left;
-    }
-
-    .row {
-      cursor: pointer;
-
-      transition: border linear 2s;
-
-      td {
-        text-align: left;
-        padding: 6px 12px;
-        border: 1px solid #d9d7ce;
-        font-size: 20px;
-
-        .input {
-          width: 85%;
-          height: 100%;
+        .box4 {
+          grid-column-start: 4;
+          grid-column-end: 5;
+          margin-left: auto;
+          margin-right: auto;
+          .search-container input[name=search], .search-container button {
+         border: none;
+            width: 150px;
+            margin: 0;
+            margin-top: 8px;
+            -webkit-border-radius: 0;
+            height: 20px;
+          }
+          .search-container button {
+            float: right;
+            padding: 6px 10px;
+            margin-top: 8px;
+            margin-right: 16px;
+            background: #ddd;
+            font-size: 17px;
+            border: none;
+            cursor: pointer;
+            width: 40px;
+            height: 40px;
+            -webkit-border-radius: 0;
+          }
+          .search-container button:hover {
+            background: #ccc;
+          }
         }
       }
     }
 
-    tr.active {
-      background: #9c6ea6;
+    button {
+      background-color: rgba(178, 149, 166, 0.96);
+      align-self: center;
+      border-radius: 3px;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 10px;
+      font-size: 20px;
+      cursor: pointer;
+      width: 200px;
+      height: 50px;
+      font-family: Garamond, monospace;
+      margin: 1%;
+      padding: 10px;
     }
 
-    .headman{
-      background: rgba(255, 65, 144, 0.75);
+    .schedule-table {
+      width: 80%;
+      margin-top: 4px;
+      margin: 0 auto;
+      background-color: #fbfbfb;
+      border-collapse: collapse;
+      vertical-align: top;
+      max-width: 100%;
+      overflow-x: auto;
+
+      .num {
+        width: auto;
+      }
+
+      .name {
+        width: 32%;
+      }
+
+      .day {
+        font-weight: bold;
+        background: rgba(156, 110, 166, 0.71);
+      }
+
+      // optional - looks better for small cell values
+      white-space: nowrap;
+      border-spacing: 0;
+
+
+      th {
+        padding: 6px 12px;
+        border: 1px solid #d9d7ce;
+        font-size: 20px;
+        text-align: left;
+      }
+
+      tr {
+        width: 100%;
+        padding: 6px 12px;
+        border: 1px solid #d9d7ce;
+        font-size: 20px;
+        text-align: left;
+      }
+
+
+      .row {
+        cursor: pointer;
+
+        transition: border linear 2s;
+
+        td {
+          text-align: left;
+          padding: 6px 12px;
+          border: 1px solid #d9d7ce;
+          font-size: 20px;
+
+          .input {
+            width: 65%;
+            height: 100%;
+          }
+        }
+      }
+
+      tr.active {
+        background: #9c6ea6;
+      }
+
+      .headman {
+        background: rgba(255, 65, 144, 0.75);
+      }
+
+      .row:hover {
+        background-color: rgba(178, 149, 166, 0.73);
+
+      }
+
+      .row:hover {
+        border-left-color: var(--mainblue);
+        border-right-color: var(--mainblue);
+      }
+
     }
+  }
 
-    .row:hover{
-      background-color: rgba(178, 149, 166, 0.73);
+  .search-container {
+    float: right;
+  }
 
-    }
 
-    .row:hover {
-      border-left-color: var(--mainblue);
-      border-right-color: var(--mainblue);
+
+  @media screen and (max-width: 600px) {
+    .search-container {
+      float: none;
     }
 
   }
-
 }
