--- a/web/schedule/src/app/component/group-number/group-number.component.scss
+++ b/web/schedule/src/app/component/group-number/group-number.component.scss
@@ -3,7 +3,6 @@
   min-height: calc(100vh - 50px);
   overflow: hidden;
   padding: 5px 5px;
-  max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
   font-family: Garamond, monospace;
@@ -27,8 +26,11 @@
 
     .clearfix { *zoom: 2;
       background: whitesmoke;
-      max-width: 1000px;
       align-items: flex-start;
+      -webkit-border-radius: 10px;
+      margin: 0 auto;
+      width: 80%;
+
       .text{
         color: var(--dark);
         font-family: Garamond, monospace;
@@ -78,13 +80,14 @@
   }
 
   .group-table {
-    width: 100%;
+    margin: 0 auto;
+    width: 80%;
     margin-top: 4px;
     background-color: #fbfbfb;
     border-collapse: collapse;
     vertical-align: top;
     max-width: 100%;
-    table-layout: fixed;
+
     overflow-x: auto;
 
     // optional - looks better for small cell values
