--- a/web/schedule/src/app/component/group-schedule/group-schedule.component.html
+++ b/web/schedule/src/app/component/group-schedule/group-schedule.component.html
@@ -24,6 +24,7 @@
             <th>Предмет</th>
             <th>Преподаватель</th>
             <th>Аудитория</th>
+            <th>Корпус</th>
           </tr>
           <tr>
             <td class="day" [rowSpan]="monday.length + 1">Пн</td>
@@ -33,6 +34,7 @@
             <td>{{s.subject.name}}</td>
             <td>{{s.lecturer.surname}} {{s.lecturer.name}} {{s.lecturer.patronymic}} </td>
             <td>{{s.auditory.auditoryNumber}}</td>
+            <td>{{s.auditory.corpus.number}}</td>
           </tr>
           <tr>
             <td class="day" [rowSpan]="tuesday.length + 1">Вт</td>
@@ -42,6 +44,7 @@
             <td >{{s.subject.name}}</td>
             <td>{{s.lecturer.surname}} {{s.lecturer.name}} {{s.lecturer.patronymic}} </td>
             <td>{{s.auditory.auditoryNumber}}</td>
+            <td>{{s.auditory.corpus.number}}</td>
           </tr>
           <tr>
             <td class="day" [rowSpan]="wednesday.length + 1">Ср</td>
@@ -51,6 +54,7 @@
             <td>{{s.subject.name}}</td>
             <td>{{s.lecturer.surname}} {{s.lecturer.name}} {{s.lecturer.patronymic}} </td>
             <td>{{s.auditory.auditoryNumber}}</td>
+            <td>{{s.auditory.corpus.number}}</td>
           </tr>
           <tr>
             <td class="day" [rowSpan]="thursday.length + 1">Чт</td>
@@ -60,6 +64,7 @@
             <td>{{s.subject.name}}</td>
             <td>{{s.lecturer.surname}} {{s.lecturer.name}} {{s.lecturer.patronymic}} </td>
             <td>{{s.auditory.auditoryNumber}}</td>
+            <td>{{s.auditory.corpus.number}}</td>
           </tr>
           <tr>
             <td class="day" [rowSpan]="friday.length + 1"> Пт</td>
@@ -69,6 +74,7 @@
             <td>{{s.subject.name}}</td>
             <td>{{s.lecturer.surname}} {{s.lecturer.name}} {{s.lecturer.patronymic}} </td>
             <td>{{s.auditory.auditoryNumber}}</td>
+            <td>{{s.auditory.corpus.number}}</td>
           </tr>
           <tr>
             <td class="day" [rowSpan]="saturday.length + 1"> Сб</td>
@@ -78,7 +84,8 @@
             <td>{{s.subject.name}}</td>
             <td>{{s.lecturer.surname}} {{s.lecturer.name}} {{s.lecturer.patronymic}} </td>
             <td>{{s.auditory.auditoryNumber}}</td>
-          </tr>
+            <td>{{s.auditory.corpus.number}}</td>
+         </tr>
         </table>
     </form>
   </div>
