--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
@@ -1,11 +1,13 @@
+
 .topnav {
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 5px 5px;
-  max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
   font-family: Garamond, monospace;
+  position: sticky;
+  top: 0;
 }
 
 .topnav a.exit{
@@ -45,14 +47,4 @@
   background-color: #9c6ea6;
   color: white;
 }
-
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-    width: 100%;
-  }
-}
-
-
 
